<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:textSize="24sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            />
        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="#"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center"
        android:textSize="20pt"
        tools:text="Question text"
        />
    <LinearLayout
        android:id="@+id/mc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <RadioGroup
            android:id="@+id/mc_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test"
                />
            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test"
                />
            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test"
                />
            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Test"
                />
        </RadioGroup>
        <Button
            android:id="@+id/mc_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gradient"
            android:textColor="@android:color/white"
            android:text="@string/submit"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/short_answer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        >
        <EditText
            android:id="@+id/short_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            tools:text="Provide an Answer"
            />
        <Button
            android:id="@+id/sa_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gradient"
            android:textColor="@android:color/white"
            android:text="@string/submit"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tf_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4sp"
        android:visibility="gone">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:textColor="@android:color/white"
            android:text="@string/t"
            android:layout_marginEnd="5sp"
            />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:textColor="@android:color/white"
            android:text="@string/f"
            android:layout_marginStart="5sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4sp">
        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:textColor="@android:color/white"
            android:text="@string/previous"
            android:layout_marginEnd="5sp"
            />
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:textColor="@android:color/white"
            android:text="@string/next"
            android:layout_marginStart="5sp"
            />
    </LinearLayout>
</LinearLayout>